[gd_scene load_steps=5 format=3 uid="uid://c2nvantogdhxk"]

[ext_resource type="Script" path="res://scripts/card_display/card_3d.gd" id="1_y1a0m"]

[sub_resource type="ViewportTexture" id="ViewportTexture_agnpc"]
viewport_path = NodePath("FrontViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_ajdle"]
viewport_path = NodePath("BackViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_5yaya"]
size = Vector3(5, 8.5, 0.2)

[node name="Card3D" type="Node3D"]
script = ExtResource("1_y1a0m")
rotation_angle = 0.265
rotation_speed = 0.1

[node name="CardDisplay" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="FrontSide" type="Sprite3D" parent="CardDisplay"]
unique_name_in_owner = true
texture = SubResource("ViewportTexture_agnpc")

[node name="BackSide" type="Sprite3D" parent="CardDisplay"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.01)
texture = SubResource("ViewportTexture_ajdle")

[node name="FrontViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
canvas_item_default_texture_filter = 0
size = Vector2i(500, 850)

[node name="BackViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
canvas_item_default_texture_filter = 0
size = Vector2i(500, 850)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_5yaya")

[connection signal="input_event" from="Area3D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_mouse_exited"]
